<resources>
    <string name="app_name"></string>
    <string name="hsi">HSI</string>
    <string name="toodo">TODO</string>
    <string name="to_stay_alive">To Stay Alive</string>
    <string name="sign_up">Sign UP</string>
    <string name="login">Login</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="national_id">National ID</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="home_page">Home Page</string>
    <string name="book">Book</string>
    <string name="update">Update</string>
    <string name="emergency">Emergency</string>
    <string name="booking">Booking</string>
    <string name="bed">Bed</string>
    <string name="a_medical">A Medical</string>
    <string name="consultation">Consultation</string>
    <string name="an_appointment">An Appointment</string>
    <string name="personal_data">Personal Data</string>
    <string name="call_123">Call 123</string>
    <string name="todo">TODO</string>
    <string name="check_e_mail">Check E-Mail</string>
    <string name="e_mail_validation">E-Mail Validation</string>
    <string name="emailaddress">EmailAddress</string>
</resources>
