<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity11">

    <Button
        android:id="@+id/checkbtn"
        android:layout_width="257dp"
        android:layout_height="71dp"
        android:layout_marginTop="60dp"
        android:background="#009688"
        android:fontFamily="@font/aladin"
        android:onClick="checkbtn"
        android:text="@string/check_e_mail"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <View
        android:id="@+id/view9"
        android:layout_width="wrap_content"
        android:layout_height="94dp"
        android:background="#009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:text="@string/e_mail_validation"
        android:textColor="#FFFFFF"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="375dp"
        android:layout_height="56dp"
        android:layout_marginTop="196dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9" />
</androidx.constraintlayout.widget.ConstraintLayout>